--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,7 +1,6 @@
 header.site-header {
-  width: 100 vw;
   display: grid;
-  grid-template-columns: auto;
   background: #ffffff;
   color: #ffffff;
+  padding: 10px;
 }
