--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,8 +1,6 @@
 .main-content {
-  display: grid;
-  width: 100vw;
   margin-top: 5%;
-  z-index: 1;
+  padding: 0 15% 5px 15%;
 }
 
 .content-wrap {
